# oshatori

./: Cargo.toml  README.md
src/: client.rs  lib.rs
src/client/: mod.rs  state.rs  stateclient.rs  storage.rs
src/connection/: mock.rs  mod.rs  sockchat.rs
src/utils/: assets.rs  bbcode.rs  color.rs  html.rs  mod.rs
tests/: mock_connection.rs  sockchat_connection.rs  stateclient.rs
