[package]
name = "oshatori"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
chrono = "0.4.39"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.12.0", features = ["serde", "v4"] }
kanii-lib = { git = "https://github.com/saikuru0/kanii-lib" }
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
url = "2.5.4"
dotenvy = "0.15.7"
